
ALL = Alle web shops.
HS  = HikaShop (Joomla)
JOO = Joomla (HikaShop + VirtueMart3)
MA  = Magento (supported versions: >= 2.3)
OC  = OpenCart (supported versions: >= 3.0)
PS  = PrestaShop (supported versions: >= 1.7.6+)
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (supported versions: >= 5.0 (WC 4 en 3 probably will work)

7.0.0-alpha1 (2022-03-??)
-------------------------
Features:
- OC: The Acumulus settings form now also appears as a menu-item under "Sales -
  Acumulus". Before it could only be accessed via "Extensions - Modules - Edit
  (Acumulus module)", so this makes it easier to access the basic settings.

Refactorings:
- PHP 7.1 is now the minimal requirement. we DO use language constructs that are
  new to PHP 7.1, so this module WILL fail fatally when you are still running an
  older PHP version.
- Refactored the ApiClient namespace to better separate the different layers and
  concerns:
  - Separate HttpRequest and HttpResponse classes that implement HTTP(S)
    communication and error handling, with no Acumulus knowledge at all. This
    facilitates communication with other services (e.g. GitHub or VIES).
  - A ConnectionHandler class that supports connection reuse. This prevents
    time costly HTTPS connection set-ups during a PHP request.
  - On top of AcumulusRequest and (Acumulus)Result classes that implement
    Acumulus Api knowledge like the submit and response structures, and error
    handling at the Acumulus level.
  - The Acumulus class still represents the Acumulus service calls as PHP
    methods.
- Refactored upgrading config values: we now store the actual config version
  with the other config values:
  - We check for an update on every load() of the config, thus independent from
    a plugin update.
  - The version of the config is now in line with the library version, not the
    plugin version. Again, this allows to separately update the library.
  - Plugins should still force setting the initial version on installation, but