@@ -18,14 +18,14 @@ use Siel\Acumulus\ApiClient\HttpResponse;
  */
 class AcumulusRequest extends BaseAcumulusRequest
 {
-    protected function executeWithHttp(): HttpResponse
+    protected function executeWithPostXmlStringApproach(): HttpResponse
     {
-        $request = new HttpRequest();
+        $this->httpRequest = new HttpRequest();
         $httpCode = 200;
         $requestHeaders = "request-headers1\r\nrequest-headers2\r\n\r\n";
         $responseHeaders = "response-headers1\r\nresponse-headers2\r\n\r\n";
         $responseBody = '{"vatinfo":{"vat":[{"vattype":"normal","vatrate":"21.0000"},{"vattype":"reduced","vatrate":"9.0000"},{"vattype":"reduced","vatrate":"0.0000"}]},"errors":{"count_errors":"0"},"warnings":{"count_warnings":"0"},"status":"0"}';
         $info = ['http_code' => $httpCode, 'request_header' => $requestHeaders, 'method_time' => 0.00123];
-        return new HttpResponse($responseHeaders, $responseBody, $info, $request);
+        return new HttpResponse($responseHeaders, $responseBody, $info, $this->httpRequest);
     }
 }
